--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(DataStruct VERSION 0.1.0)
 
-file(GLOB SOURCES_FILES
-    ${PROJECT_SOURCE_DIR}/*.c
+add_executable(DataStruct
+    "Main.c"
+    "ArrayList/ArrayList.c"
+    "LinkedList/LinkedList.c"
+    "Stack/Stack.c"
+    "Queue/Queue.c"
+    "String/String.c"
 )
-add_executable(DataStruct ${SOURCES_FILES})
