调整项目结构。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(DataStruct VERSION 0.1.0)
 
+include_directories(
+    ${PROJECT_SOURCE_DIR}/Headers
+)
+
 add_executable(DataStruct
-    "Main.c"
-    "ArrayList/ArrayList.c"
-    "LinkedList/LinkedList.c"
-    "Stack/Stack.c"
-    "Queue/Queue.c"
-    "String/String.c"
+    "Sources/Main.c"
+    "Sources/ArrayList.c"
+    "Sources/LinkedList.c"
+    "Sources/Stack.c"
+    "Sources/Queue.c"
+    "Sources/String.c"
 )
