--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,14 @@ cmake_minimum_required(VERSION 3.0.0)
 project(DataStruct VERSION 0.1.0)
 
 include_directories(
-    ${PROJECT_SOURCE_DIR}/Headers
+    ${PROJECT_SOURCE_DIR}/include
 )
 
 add_executable(DataStruct
-    "Sources/Main.c"
-    "Sources/ArrayList.c"
-    "Sources/LinkedList.c"
-    "Sources/Stack.c"
-    "Sources/Queue.c"
-    "Sources/String.c"
+    "src/main.c"
+    "src/arraylist.c"
+    "src/linkedlist.c"
+    "src/stack.c"
+    "src/queue.c"
+    "src/stringbuffer.c"
 )
